[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reddirt"
version = "0.1.0"
description = "An interactive CLI for analyzing Reddit user activity using LLMs."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "praw>=7.8.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "rich",
    "inquirer",
    "sounddevice>=0.5.2",
    "numpy>=2.3.1",
    "tiktoken",
    "openai",
]

[dependency-groups]
dev = ["ruff>=0.12.1"]

[tool.ruff]
# Set the maximum line length.
line-length = 120

[tool.ruff.lint]
# Enable Pyflakes (F), pycodestyle (E, W), and isort (I) rules.
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
# Tell ruff that "reddit_who_dis" is a first-party import. This helps
# it group your project's imports correctly.
known-first-party = ["reddit_who_dis"]

[tool.ruff.lint.per-file-ignores]
# In __init__.py files, import order and unused imports are often
# intentional to control the package's public API.
"**/__init__.py" = ["F401"]

[tool.ruff.format]
# The formatter will automatically sort imports.

[project.scripts]
reddirt = "reddirt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
